k8s/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30032 # This is very much setup for localhost ideally I would do this to a deployed resource

#spec:
#  type: ClusterIP
#  selector:
#    app: postgres
#  ports:
#    - protocol: TCP
#      port: 5432
#      targetPort: 5432
