k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  #type: LoadBalancer
  type: NodePort # Makes local testing easier
  selector:
    app: user-management-service
  ports:
    - port: 80
      targetPort: 8080
      #nodePort: 30033
